<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    >

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.alexxingplus.nntuandroid.ui.home.HomeFragment"
        android:label="@string/title_navigation"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.alexxingplus.nntuandroid.ui.dashboard.DashboardFragment"
        android:label="@string/title_marks"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.alexxingplus.nntuandroid.ui.notifications.NotificationsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_notifications" >
    </fragment>

    <fragment
        android:id="@+id/navigation_timetable"
        android:name="com.alexxingplus.nntuandroid.ui.timeTableFragment"
        android:label="@string/title_timeTable"
        tools:layout="@layout/account_fragment">
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.alexxingplus.nntuandroid.ui.settings"
        android:label="@string/title_settings"
        tools:layout="@layout/account_fragment">
    </fragment>

    <activity
        android:id="@+id/navigation_article"
        android:name="com.alexxingplus.nntuandroid.ui.ArticleActivity"
        android:label="@string/title_article"
        tools:layout="@layout/activity_article">
    </activity>








</navigation>
