<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:background="?android:attr/colorBackground">


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43"
        android:clipToPadding="false"
        android:clipChildren="false">

        <TextView
            android:id="@+id/upperText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/code_Message"
            android:textColor="?attr/color"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/radius"
            android:elevation="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/codeTextField"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:background="@drawable/radius"
                android:hint="@string/Введите_код"
                android:padding="10dp" />

            <Button
                android:id="@+id/enterCodeButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:text="@string/Далее" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/code_advise"
            android:textColor="?attr/color"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/emailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:clipToPadding="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/radius"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:elevation="5dp"
            android:padding="10dp"
            android:text="nntuapp@inbox.ru" />

        <Button
            android:id="@+id/vkButton"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:clipToPadding="true"
            android:layout_height="wrap_content"
            android:background="@drawable/radius"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:elevation="5dp"
            android:padding="10dp"
            android:text="@string/Группа_ВК" />


    </LinearLayout>

    <Button
        android:id="@+id/info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="15dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:clipToPadding="true"
        android:background="@drawable/radius"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:elevation="5dp"
        android:padding="10dp"
        android:text="@string/Зачем_нужен_код"/>
</androidx.constraintlayout.widget.ConstraintLayout>