<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clipChildren="false"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/radius"
            android:paddingTop="20dp"
            android:paddingBottom="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:elevation="30dp"
            android:clipChildren="false"
            android:clipToPadding="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Кем_вы_являетесь"
                android:textSize="17sp"
                android:textColor="?attr/color"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/bakButton"

                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:clipToPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:background="@drawable/radius"
                android:elevation="7dp"
                android:padding="10dp"
                android:text="@string/Студент_бакалавриата_специалитета"/>

            <Button
                android:id="@+id/magButton"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:clipToPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:background="@drawable/radius"
                android:elevation="7dp"
                android:padding="10dp"
                android:text="@string/Студент_магистратуры"/>

            <Button
                android:id="@+id/prepButton"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:clipToPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:background="@drawable/radius"
                android:elevation="7dp"
                android:padding="10dp"
                android:text="@string/Преподаватель"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/radius"
            android:elevation="3dp">
            <Button
                android:id="@+id/cancelButton"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:clipToPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/radius"
                android:shadowColor="@color/NNTUred"
                android:padding="10dp"
                android:textColor="@color/lighterNNTUred"
                android:text="@string/Отмена"/>
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>