<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clipChildren="false"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/radius"
            android:elevation="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:clipChildren="false"
            android:clipToPadding="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Дополнительные_действия"
                android:textSize="16sp"
                android:textColor="?attr/color"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/loadTimeTableButton"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:clipToPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/radius"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:elevation="5dp"
                android:padding="10dp"
                android:text="@string/Показать_существующее_расписание" />

            <Button
                android:id="@+id/copyDayButton"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:clipToPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/radius"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:elevation="5dp"
                android:padding="10dp"
                android:text="@string/Перенести_день_с_другой_недели" />

            <Button
                android:id="@+id/deleteTheDayButton"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:clipToPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:elevation="5dp"
                android:padding="10dp"
                android:text="@string/Очистить_день" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/radius"
            android:elevation="3dp"
            android:clipChildren="false"
            android:clipToPadding="false">
            <Button
                android:id="@+id/backToEditButton"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:clipToPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/radius"
                android:shadowColor="?attr/colorPrimary"
                android:padding="10dp"
                android:textColor="?attr/colorPrimary"
                android:text="@string/Отмена"/>
        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>